# systemd-compat-libs

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  meson.build  meson_options.txt
src/compat-libs/: libsystemd-daemon.pc.in  libsystemd-daemon.sym  libsystemd-id128.pc.in  libsystemd-id128.sym  libsystemd-journal.pc.in  libsystemd-journal.sym  libsystemd-login.pc.in  libsystemd-login.sym  linkwarning.h  meson.build
subprojects/: systemd.wrap
tools/: add-git-hook.sh  meson-cleanup-install.sh  meson-compat-lib.sh  meson-dummy-script.sh
wrap-patches/: README
